<?xml version="1.0"?>
<package format="2">
  <name>cascaded_pgo</name>
  <version>0.0.0</version>
  <description>The cascaded_pgo package</description>

  <!-- Maintainer information (one maintainer per tag) -->
  <maintainer email="huai.3@osu.edu">jhuai</maintainer>

  <!-- License information.
       Common licenses include: BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>BSD</license>

  <!-- Build tool dependency -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>eigen_catkin</build_depend>
  <build_depend>ceres_catkin</build_depend>
  <build_depend>roscpp</build_depend>

  <!-- Execution dependencies -->
  <exec_depend>eigen_catkin</exec_depend>
  <exec_depend>ceres_catkin</exec_depend>
  <exec_depend>roscpp</exec_depend>

  <!-- Export additional package information here -->
  <export>
    <!-- Additional export tags can be placed here, e.g., if this package is a metapackage:
         <metapackage/> -->
  </export>
</package>
